# ChatPT

./: .gitignore  DEPLOYMENT.md  LICENSE  MOBILE_ACCESS.md  Makefile  README.md  app.py  chatpt.db  pyproject.toml  view_missing_exercises.py
.github/workflows/: python_workflow.yml
.streamlit/: config.toml  secrets.toml.example
chat_pt/: __init__.py  admin_stats_page.py  consultation_page.py  context_builder.py  database.py  db_interface.py  email_service.py  exercise_data.py  exercise_library_page.py  google_auth.py  llm_handler.py  nutrition_consultation_page.py  nutrition_plans_page.py  plans_page.py  progress_page.py  session_manager.py  supabase_db.py  utils.py
tests/: test_context_builder.py  test_database.py  test_email_service.py  test_grid_view_fix.py  test_integration.py  test_llm_handler.py  test_placeholder.py  test_plans_page_tidy.py  test_session_manager.py  test_supabase_db.py  test_utils.py
