[tool.poetry]
name = "chatpt"
version = "0.1.0"
description = "AI-Powered Personal Trainer - Create personalized workout plans through intelligent consultations"
authors = ["rgreen 1995 <rgreen1995@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_pt"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.0"
requests = "^2.31.0"
openai = "^1.12.0"
google-generativeai = "^0.3.0"
pandas = "^2.0.0"
plotly = "^5.18.0"
python-dotenv = "^1.0.0"
streamlit-google-auth = "^1.1.8"
supabase = "^2.0.0"
resend = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
   ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".env",
    "env",
    "venv"
]

line-length = 100
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable pycodestyle error and warning (E, W), Pyflakes (F), isort(I), Bugbear(B), pyupgrade(UP)
# and Ruff(RUF) rules
# not currently looking at pydocstyle(D), Pep8 naming(N), Mccabe(complexity C90) and many others
# see https://docs.astral.sh/ruff/rules/ for all
select = ["E", "W", "F", "I", "B", "UP", "RUF", "C4", "ICN", "PT", "D"]
# F811 is redefining fixtures in tests, need to use a conf.py
# PT006 pytest mark parameterize error that I don't understand
# PT011 pytest check Value error also needs an expected error message
# D400 checks line ends with a period, but that is a duplicate of D415 which
# checks it ends in period, question mark, or exclamation point
ignore = ["F811", "PT006", "PT011", "D205", "D400", "D100", "D211", "D212", "E501"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# don't fix F401 until I fix the importing in tests
unfixable = ["F401"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# "chat_pt/exercise_data.py" = ["E501"]
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = 72  # Adjust the line length as needed